Version 5.9.214.1 (cherry-pick)

Merged d3f1d5c50cd6ada48371c1eb2560d2b0ec24533a

Revert of [wasm] instantiate expressed in terms of compile (patchset #6 id:140001 of https://codereview.chromium.org/2806073002/ )

BUG=chromium:710824
LOG=N
TBR=machenbach@chromium.org

Change-Id: I8d14a9b53b0d8aec68917b4cb43ef31ec3357906
Reviewed-on: https://chromium-review.googlesource.com/475675
Reviewed-by: Michael Hablich <hablich@chromium.org>
Cr-Commit-Position: refs/heads/5.9.214@{#2}
Cr-Branched-From: 5f90a6eb0675b79f2bc29ebfa05d30051d3bd23e-refs/heads/master@{#44607}